# docs/swagger.yaml
@@ -163,9 +163,7 @@ paths:
       - Auth
   /refresh:
     post:
-      consumes:
-      - application/json
-      description: 重新取得Token
+      description: 傳入 refresh_token 取得新的 access_token 與 refresh_token
       produces:
       - application/json
       responses:
@@ -177,7 +175,7 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/utils.JsonResult'
-      summary: 重新獲取Token
+      summary: 使用者重新獲得 Token
       tags:
       - Auth
   /register:
@@ -224,13 +222,14 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/utils.JsonResult'
+      security:
+      - BearerAuth: []
       summary: 獲取基本資料
       tags:
       - User
 securityDefinitions:
   BearerAuth:
-    description: '請求頭中必須添加 Authorization Bearer {token}，例如 "Authorization: Bearer
-      abcxyz"'
+    description: '請求頭中必須添加 Authorization Bearer {token}，Value請填 : Bearer {token}"'
     in: header
     name: Authorization
     type: apiKey
